feat(Transformation): adding the transformation file, plus adding the cloudBucket class implementation
modifications ate CloudBucket and mage_etl

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-SECRET_ACCESS_KEY=Ib4bDYbx5jdLrjDQulpiQRSKGPer5ffkx5ppi9ug
-ACCESS_KEY_ID=UUPFWV82Q3J8VYVHNZBQ
+HUAWEI_SECRET_ACCESS_KEY=Ib4bDYbx5jdLrjDQulpiQRSKGPer5ffkx5ppi9ug
+HUAWEI_ACCESS_KEY_ID=UUPFWV82Q3J8VYVHNZBQ
+POSTGRES_HOST=10.238.65.122
+POSTGRES_PORT=5432
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=post123
